christmas game theme

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
-    <script src="hangman.js" defer></script>
-    <script src="app.js" defer></script>
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="./script/request.js" defer></script>
+    <script src="./script/hangman.js" defer></script>
+    <script src="./script/app.js" defer></script>
 </head>
 <body>
-    <h2>hangman puzzle</h2>
-  <div id="puzl"></div>
+    <div>
+    <h2>Have fun!!!  Guess the word </h2></br>
+    <div id="puzl"></div>
+    <button id="set">Reset</button>
+    </div>
 </body>
 </html>
