--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="./script/request.js" defer></script>
-    <script src="./script/hangman.js" defer></script>
-    <script src="./script/app.js" defer></script>
+    <script src="request.js" defer></script>
+    <script src="hangman.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
     <div>
